Adduct comparator